# mov

./: .gitignore
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/src/: config.rs  main.rs
backend/src/db/: mod.rs
backend/src/dto/: page.rs
backend/src/handlers/: mod.rs  video.rs
backend/src/models/: video.rs
backend/src/routes/: mod.rs  video.rs
backend/src/services/: mod.rs  video_image.rs
backend/src/storage/: mod.rs
frontend/platform/: README.md  angular.json  package.json  pnpm-lock.yaml
frontend/platform/src/: index.html  styles.css
frontend/platform/src/app/: app.config.ts  app.routes.ts
frontend/platform/src/app/core/interceptors/: error.interceptor.ts
frontend/platform/src/app/core/models/: filters.model.ts  pagination.model.ts
frontend/platform/src/app/features/videos/: video.model.ts  videos.api.ts  videos.store.ts
frontend/platform/src/app/features/videos/components/dashboard/: dashboard.css  dashboard.html  dashboard.ts
frontend/platform/src/app/features/videos/components/filters/: filters.css  filters.html  filters.ts
frontend/platform/src/app/features/videos/pages/index/: index.css  index.html  index.ts
frontend/platform/src/environment/: environment.ts
