[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Opcional pero pro: hace fallar si intentas compilar con Rust viejo (MSRV)
rust-version = "1.91"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower-http = { version = "0.6", features = ["cors", "trace"] }

dotenv = "0.15"

sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "uuid",
  "rust_decimal"
] }

rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"

aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }